--- a/inst/Rmd/isoMS_report.Rmd
+++ b/inst/Rmd/isoMS_report.Rmd
@@ -71,11 +71,12 @@ all_aa %>%
   filter(peak=='13C') %>% 
   group_by(ion,file) %>% 
   summarize(m = median(gamma), md = mad(gamma)) -> mmad
+nf <- length(unique(all_aa$file))
 aa_data <- all_aa %>%
   filter(peak=='13C') %>% 
   left_join(mmad, by=c('ion','file')) %>% 
   filter(gamma>(m-3*md) & gamma < (m+3*md))
-aa_data$ion <- factor(aa_data$ion, levels = (mmad %>% summarise(md=mean(md)) %>% filter(md>0) %>% arrange(md))$ion)
+aa_data$ion <- factor(aa_data$ion, levels = (mmad %>% summarise(n=n(),md=mean(md)) %>% filter(md>0, n==nf) %>% arrange(md))$ion)
 
 ion_plot <- levels(aa_data$ion)[1:4]
 aa_data %>% 
@@ -127,7 +128,7 @@ aa_data %>%
     sd = sd(gamma)*100, 
     se = sd(gamma)/sqrt(n())*100, 
     n=n(), 
-    tic=median(log10(tic),na.rm=T)) %>% 
+    tic=median(ldI,na.rm=T)) %>% 
   arrange(tic) %>% 
   ggplot(aes(x=tic, y=mean,  color=group)) +
     geom_point(size=3) + geom_smooth(method = "lm", se=F)+ geom_errorbar(aes(ymin=mean-3*se, ymax=mean+3*se),size=2)  +
