missing elements don't cause the crush in report

--- a/inst/Rmd/isoMS_report.Rmd
+++ b/inst/Rmd/isoMS_report.Rmd
@@ -759,92 +759,92 @@ res %>%
 ```{r 18O, echo=FALSE, message=FALSE, warning=FALSE, fig.width=12, fig.height=12}
 vals <- (all_aa %>% filter(peak=='18O'))$gamma
 if(length(vals)>0){
-vmin <- quantile(vals, 0.05)
-vmax <- quantile(vals, 0.95)
-all_aa %>% 
-  filter(peak=='18O') %>% 
-  group_by(ion,file) %>% 
-  summarize(m = median(gamma), md = mad(gamma)) -> mmad
-aa_data <- all_aa %>%
-  filter(peak=='18O') %>% 
-  left_join(mmad, by=c('ion','file')) %>% 
-  filter(gamma>(m-3*md) & gamma < (m+3*md))
-aa_data$ion <- factor(
-  aa_data$ion, 
-  levels = (mmad %>% 
-              summarise(n=n(),md=mean(md)) %>%
-              mutate(sortby = ifelse((md>0 & n==nf), md, 1e5)) %>% 
-              arrange(md, desc(n)))$ion)
-
-aa_data <- aa_data %>% 
-  group_by(group, ion) %>%
-  mutate(ldI = ldI-median(ldI)) %>% ungroup()
-
-aa_data %>% 
-  group_by(group, ion) %>%
-  do({
-    dd_ <- .
-    broom::tidy(lm(gamma~ldI, data=dd_))
-  }) %>% filter(term=='ldI') %>% select(group, ion, estimate) -> ldI_models
-
-aa_data <- aa_data %>% 
-  left_join(ldI_models, by=c('group','ion')) %>% 
-  mutate(gamma=gamma - ldI*estimate)
-
-ion_plot <- levels(aa_data$ion)[1:4]
-aa_data %>% 
-  filter(ion %in% ion_plot) %>% 
-  ggplot(aes(x=rt/60, y=gamma, color=group, group=file)) + 
-    geom_point(size=0.1, alpha=0.2) + #geom_smooth() +
-    theme_bw() + 
-    facet_grid(.~ion) + 
-    theme(legend.position = "",axis.text.x = element_text(angle = 90, hjust = 1))+ 
-    xlab('RT, min') +
-    ylab(bquote(''^18*'O'/''^16*'O')) -> g_rt
-
-aa_data %>% 
-  filter(ion %in% ion_plot) %>% 
-  ggplot(aes(x=tic, y=gamma, color=group, group=file)) + 
-    geom_point(size=0.1, alpha=0.2) + #geom_smooth() +
-    theme_bw() + 
-    facet_grid(ion~.) + 
-    theme(legend.position = "",axis.text.x = element_text(angle = 90, hjust = 1))+ 
-    xlab('TIC, a.u.') + scale_x_log10() +
-    ylab(bquote(''^18*'O'/''^16*'O')) -> g_logI
-aa_data %>% 
-  ggplot(aes(x=file, y=gamma, fill=group)) + geom_boxplot( outlier.color = NA, notch=T)  +
-  theme_bw() +
-  theme(legend.position = "")+ 
-  ylab(bquote(''^18*'O'/''^16*'O')) + xlab("") +
-  facet_wrap(~ion) -> g_bp
-aa_data %>% 
-  filter(ion=='any') %>% 
-  ggplot(aes(x=gamma, group=file, fill=group)) + geom_density(alpha=0.3)  +
-  theme_bw() +
-  theme(legend.position = "")+ 
-  xlab(bquote(''^18*'O'/''^16*'O')) + xlab("density") -> g_density
-aa_data %>% 
-  filter(ion %in% ion_plot) %>% 
-  group_by(ion, group,file) %>% 
-  summarize(
-    mean=mean(gamma)*100, 
-    median=median(gamma)*100, 
-    wmean = weighted.mean(gamma, logI)*100, 
-    sd = sd(gamma)*100, 
-    se = sd(gamma)/sqrt(n())*100, 
-    n=n(), 
-    tic=median(log10(tic),na.rm=T)) %>% 
-  arrange(tic) %>% 
-  ggplot(aes(x=tic, y=mean,  color=group)) +
-    geom_point(size=3) + geom_smooth(method = "lm", se=F)+ geom_errorbar(aes(ymin=mean-3*se, ymax=mean+3*se),size=2)  +
-    theme_bw() + facet_grid(.~ion, scales='free') -> g_tic
-#grid.arrange(g_rt, g_logI, g_bp, g_density, ncol=1)
-
-print(g_rt)
-print(g_logI)
-print(g_bp)
-print(g_density)
-print(g_tic)
+  vmin <- quantile(vals, 0.05)
+  vmax <- quantile(vals, 0.95)
+  all_aa %>% 
+    filter(peak=='18O') %>% 
+    group_by(ion,file) %>% 
+    summarize(m = median(gamma), md = mad(gamma)) -> mmad
+  aa_data <- all_aa %>%
+    filter(peak=='18O') %>% 
+    left_join(mmad, by=c('ion','file')) %>% 
+    filter(gamma>(m-3*md) & gamma < (m+3*md))
+  aa_data$ion <- factor(
+    aa_data$ion, 
+    levels = (mmad %>% 
+                summarise(n=n(),md=mean(md)) %>%
+                mutate(sortby = ifelse((md>0 & n==nf), md, 1e5)) %>% 
+                arrange(md, desc(n)))$ion)
+  
+  aa_data <- aa_data %>% 
+    group_by(group, ion) %>%
+    mutate(ldI = ldI-median(ldI)) %>% ungroup()
+  
+  aa_data %>% 
+    group_by(group, ion) %>%
+    do({
+      dd_ <- .
+      broom::tidy(lm(gamma~ldI, data=dd_))
+    }) %>% filter(term=='ldI') %>% select(group, ion, estimate) -> ldI_models
+  
+  aa_data <- aa_data %>% 
+    left_join(ldI_models, by=c('group','ion')) %>% 
+    mutate(gamma=gamma - ldI*estimate)
+  
+  ion_plot <- levels(aa_data$ion)[1:4]
+  aa_data %>% 
+    filter(ion %in% ion_plot) %>% 
+    ggplot(aes(x=rt/60, y=gamma, color=group, group=file)) + 
+      geom_point(size=0.1, alpha=0.2) + #geom_smooth() +
+      theme_bw() + 
+      facet_grid(.~ion) + 
+      theme(legend.position = "",axis.text.x = element_text(angle = 90, hjust = 1))+ 
+      xlab('RT, min') +
+      ylab(bquote(''^18*'O'/''^16*'O')) -> g_rt
+  
+  aa_data %>% 
+    filter(ion %in% ion_plot) %>% 
+    ggplot(aes(x=tic, y=gamma, color=group, group=file)) + 
+      geom_point(size=0.1, alpha=0.2) + #geom_smooth() +
+      theme_bw() + 
+      facet_grid(ion~.) + 
+      theme(legend.position = "",axis.text.x = element_text(angle = 90, hjust = 1))+ 
+      xlab('TIC, a.u.') + scale_x_log10() +
+      ylab(bquote(''^18*'O'/''^16*'O')) -> g_logI
+  aa_data %>% 
+    ggplot(aes(x=file, y=gamma, fill=group)) + geom_boxplot( outlier.color = NA, notch=T)  +
+    theme_bw() +
+    theme(legend.position = "")+ 
+    ylab(bquote(''^18*'O'/''^16*'O')) + xlab("") +
+    facet_wrap(~ion) -> g_bp
+  aa_data %>% 
+    filter(ion=='any') %>% 
+    ggplot(aes(x=gamma, group=file, fill=group)) + geom_density(alpha=0.3)  +
+    theme_bw() +
+    theme(legend.position = "")+ 
+    xlab(bquote(''^18*'O'/''^16*'O')) + xlab("density") -> g_density
+  aa_data %>% 
+    filter(ion %in% ion_plot) %>% 
+    group_by(ion, group,file) %>% 
+    summarize(
+      mean=mean(gamma)*100, 
+      median=median(gamma)*100, 
+      wmean = weighted.mean(gamma, logI)*100, 
+      sd = sd(gamma)*100, 
+      se = sd(gamma)/sqrt(n())*100, 
+      n=n(), 
+      tic=median(log10(tic),na.rm=T)) %>% 
+    arrange(tic) %>% 
+    ggplot(aes(x=tic, y=mean,  color=group)) +
+      geom_point(size=3) + geom_smooth(method = "lm", se=F)+ geom_errorbar(aes(ymin=mean-3*se, ymax=mean+3*se),size=2)  +
+      theme_bw() + facet_grid(.~ion, scales='free') -> g_tic
+  #grid.arrange(g_rt, g_logI, g_bp, g_density, ncol=1)
+  
+  print(g_rt)
+  print(g_logI)
+  print(g_bp)
+  print(g_density)
+  print(g_tic)
 }
 ```
 
@@ -853,81 +853,83 @@ print(g_tic)
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.width=12, fig.height=12}
 if(length(vals)>0){
-aa_data %>% 
-  group_by(ion, group,file) %>% 
-  summarize(
-    mean=mean(gamma)*100, 
-    median=median(gamma)*100, 
-    wmean = weighted.mean(gamma, logI)*100, 
-    sd = sd(gamma)*100, 
-    se = sd(gamma)/sqrt(n())*100, 
-    n=n(), 
-    tic=median(log10(tic), na.rm=T)) %>% 
-  arrange(ion) -> res_group
-res_group %>% 
-  ungroup() %>% 
-  arrange(ion, group, file) %>% 
-  datatable(extensions = 'Buttons', options = list(
-                                        dom = 'Bfrtip',
-                                        buttons = c('copy', 'csv', 'excel', 'pdf', 'print')
-  )) %>%
-  formatSignif(c('mean','median','wmean','sd'), 6) %>%  formatSignif(c('se','tic'), 2) %>%
-  formatStyle(
-    'mean',
-    background = styleColorBar(res_group$mean, 'azure'),
-    backgroundSize = '100% 90%',
-    backgroundRepeat = 'no-repeat',
-    backgroundPosition = 'center'
-  ) %>%
-  formatStyle(
-    'median',
-    background = styleColorBar(res_group$median, 'azure'),
-    backgroundSize = '100% 90%',
-    backgroundRepeat = 'no-repeat',
-    backgroundPosition = 'center'
-  ) %>%
-  formatStyle(
-    'wmean',
-    background = styleColorBar(res_group$wmean, 'azure'),
-    backgroundSize = '100% 90%',
-    backgroundRepeat = 'no-repeat',
-    backgroundPosition = 'center'
-  )
-res_group -> fileres_O
-# tlist <- list()
-# for(aa in unique(res_group$ion)){
-#   tt <- res_group %>% 
-#     filter(ion==aa)
-#   
-#   tlist[[aa]] <- tt %>% 
-#     datatable(extensions = 'Buttons', options = list(
-#                                         dom = 'Bfrtip',
-#                                         buttons = c('copy', 'csv', 'excel', 'pdf', 'print')
-#     )) %>%  
-#     formatSignif(c('mean','median','wmean','sd'), 6) %>%  formatSignif(c('se'), 1) %>%
-#     formatStyle(
-#       'mean',
-#       background = styleColorBar(tt$mean, 'azure'),
-#       backgroundSize = '100% 90%',
-#       backgroundRepeat = 'no-repeat',
-#       backgroundPosition = 'center'
-#     ) %>%
-#     formatStyle(
-#       'median',
-#       background = styleColorBar(tt$median, 'azure'),
-#       backgroundSize = '100% 90%',
-#       backgroundRepeat = 'no-repeat',
-#       backgroundPosition = 'center'
-#     ) %>%
-#     formatStyle(
-#       'wmean',
-#       background = styleColorBar(tt$wmean, 'azure'),
-#       backgroundSize = '100% 90%',
-#       backgroundRepeat = 'no-repeat',
-#       backgroundPosition = 'center'
-#     )
-# }
-# htmltools::tagList(tlist)
+  aa_data %>% 
+    group_by(ion, group,file) %>% 
+    summarize(
+      mean=mean(gamma)*100, 
+      median=median(gamma)*100, 
+      wmean = weighted.mean(gamma, logI)*100, 
+      sd = sd(gamma)*100, 
+      se = sd(gamma)/sqrt(n())*100, 
+      n=n(), 
+      tic=median(log10(tic), na.rm=T)) %>% 
+    arrange(ion) -> res_group
+  res_group %>% 
+    ungroup() %>% 
+    arrange(ion, group, file) %>% 
+    datatable(extensions = 'Buttons', options = list(
+                                          dom = 'Bfrtip',
+                                          buttons = c('copy', 'csv', 'excel', 'pdf', 'print')
+    )) %>%
+    formatSignif(c('mean','median','wmean','sd'), 6) %>%  formatSignif(c('se','tic'), 2) %>%
+    formatStyle(
+      'mean',
+      background = styleColorBar(res_group$mean, 'azure'),
+      backgroundSize = '100% 90%',
+      backgroundRepeat = 'no-repeat',
+      backgroundPosition = 'center'
+    ) %>%
+    formatStyle(
+      'median',
+      background = styleColorBar(res_group$median, 'azure'),
+      backgroundSize = '100% 90%',
+      backgroundRepeat = 'no-repeat',
+      backgroundPosition = 'center'
+    ) %>%
+    formatStyle(
+      'wmean',
+      background = styleColorBar(res_group$wmean, 'azure'),
+      backgroundSize = '100% 90%',
+      backgroundRepeat = 'no-repeat',
+      backgroundPosition = 'center'
+    )
+  res_group -> fileres_O
+  # tlist <- list()
+  # for(aa in unique(res_group$ion)){
+  #   tt <- res_group %>% 
+  #     filter(ion==aa)
+  #   
+  #   tlist[[aa]] <- tt %>% 
+  #     datatable(extensions = 'Buttons', options = list(
+  #                                         dom = 'Bfrtip',
+  #                                         buttons = c('copy', 'csv', 'excel', 'pdf', 'print')
+  #     )) %>%  
+  #     formatSignif(c('mean','median','wmean','sd'), 6) %>%  formatSignif(c('se'), 1) %>%
+  #     formatStyle(
+  #       'mean',
+  #       background = styleColorBar(tt$mean, 'azure'),
+  #       backgroundSize = '100% 90%',
+  #       backgroundRepeat = 'no-repeat',
+  #       backgroundPosition = 'center'
+  #     ) %>%
+  #     formatStyle(
+  #       'median',
+  #       background = styleColorBar(tt$median, 'azure'),
+  #       backgroundSize = '100% 90%',
+  #       backgroundRepeat = 'no-repeat',
+  #       backgroundPosition = 'center'
+  #     ) %>%
+  #     formatStyle(
+  #       'wmean',
+  #       background = styleColorBar(tt$wmean, 'azure'),
+  #       backgroundSize = '100% 90%',
+  #       backgroundRepeat = 'no-repeat',
+  #       backgroundPosition = 'center'
+  #     )
+  # }
+  # htmltools::tagList(tlist)
+} else {
+  fileres_O <- data.frame()
 }
 ```
 
@@ -935,61 +937,79 @@ res_group -> fileres_O
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE}
 if(length(vals)>0){
-res_group %>%
-  summarize(gmean=mean(mean), gmedian=mean(median), gwmean=mean(wmean), sd_mean=sd(mean), sd_median=sd(median), sd_wmean=sd(wmean), n=n()) %>%
-  mutate(
-    cv_mean = sd_mean/gmean/sqrt(n)*100,
-    cv_median = sd_median/gmedian/sqrt(n)*100,
-    cv_wmean = sd_wmean/gwmean/sqrt(n)*100
-  ) -> res
-res %>% 
-    datatable(extensions = 'Buttons', options = list(
-                                        dom = 'Bfrtip',
-                                        buttons = c('copy', 'csv', 'excel', 'pdf', 'print')
-    )) %>%  
-    formatSignif(c('gmean','gmedian','gwmean','sd_mean','sd_median','sd_wmean'), 6) %>%
-    formatSignif(c('cv_mean','cv_median','cv_wmean'), 2) %>%
-    formatStyle(
-      'gmean',
-      background = styleColorBar(res$gmean, 'azure'),
-      backgroundSize = '100% 90%',
-      backgroundRepeat = 'no-repeat',
-      backgroundPosition = 'center'
-    ) %>%
-    formatStyle(
-      'gmedian',
-      background = styleColorBar(res$gmedian, 'azure'),
-      backgroundSize = '100% 90%',
-      backgroundRepeat = 'no-repeat',
-      backgroundPosition = 'center'
-    ) %>%
-    formatStyle(
-      'gwmean',
-      background = styleColorBar(res$gwmean, 'azure'),
-      backgroundSize = '100% 90%',
-      backgroundRepeat = 'no-repeat',
-      backgroundPosition = 'center'
-    )}
+  res_group %>%
+    summarize(gmean=mean(mean), gmedian=mean(median), gwmean=mean(wmean), sd_mean=sd(mean), sd_median=sd(median), sd_wmean=sd(wmean), n=n()) %>%
+    mutate(
+      cv_mean = sd_mean/gmean/sqrt(n)*100,
+      cv_median = sd_median/gmedian/sqrt(n)*100,
+      cv_wmean = sd_wmean/gwmean/sqrt(n)*100
+    ) -> res
+  res %>% 
+      datatable(extensions = 'Buttons', options = list(
+                                          dom = 'Bfrtip',
+                                          buttons = c('copy', 'csv', 'excel', 'pdf', 'print')
+      )) %>%  
+      formatSignif(c('gmean','gmedian','gwmean','sd_mean','sd_median','sd_wmean'), 6) %>%
+      formatSignif(c('cv_mean','cv_median','cv_wmean'), 2) %>%
+      formatStyle(
+        'gmean',
+        background = styleColorBar(res$gmean, 'azure'),
+        backgroundSize = '100% 90%',
+        backgroundRepeat = 'no-repeat',
+        backgroundPosition = 'center'
+      ) %>%
+      formatStyle(
+        'gmedian',
+        background = styleColorBar(res$gmedian, 'azure'),
+        backgroundSize = '100% 90%',
+        backgroundRepeat = 'no-repeat',
+        backgroundPosition = 'center'
+      ) %>%
+      formatStyle(
+        'gwmean',
+        background = styleColorBar(res$gwmean, 'azure'),
+        backgroundSize = '100% 90%',
+        backgroundRepeat = 'no-repeat',
+        backgroundPosition = 'center'
+      )
+}
 ```
 
-## Final tabels {.tabset}
+## Final tables {.tabset}
+
+### Isotopic composition
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.width=12, fig.height=12}
-fileres_C %>% 
-  summarize(C=mean(median), C_cv = sd(median)/mean(median)/sqrt(n())*100) %>% ungroup() %>%  
-  full_join(
-    fileres_N %>% 
-      summarize(N=mean(median), N_cv = sd(median)/mean(median)/sqrt(n())*100) %>% ungroup()
-  ) %>% 
-  full_join(
-    fileres_H %>% 
-      summarize(H=mean(median), H_cv = sd(median)/mean(median)/sqrt(n())*100) %>% ungroup()
-  ) %>% 
-  full_join(
-    fileres_O %>% 
-      summarize(O=mean(median), O_cv = sd(median)/mean(median)/sqrt(n())*100) %>% ungroup()
-  ) -> isotopes_combined
+isotopes_combined <- data.frame()
 
+if (nrow(fileres_C) > 0) {
+  isotopes_combined <- fileres_C %>% 
+    summarize(C=mean(median), C_cv = sd(median)/mean(median)/sqrt(n())*100) %>% ungroup() 
+}
+
+if (nrow(fileres_N) > 0) {
+  isotopes_combined <- isotopes_combined %>%  
+    full_join(
+      fileres_N %>% 
+        summarize(N=mean(median), N_cv = sd(median)/mean(median)/sqrt(n())*100) %>% ungroup()
+    ) 
+}
+
+if (nrow(fileres_H) > 0) {
+  isotopes_combined <- isotopes_combined %>% 
+    full_join(
+      fileres_H %>% 
+        summarize(H=mean(median), H_cv = sd(median)/mean(median)/sqrt(n())*100) %>% ungroup()
+    ) 
+}
+
+if (nrow(fileres_O) > 0) {
+  isotopes_combined <- isotopes_combined %>% 
+    full_join(
+      fileres_O %>% 
+        summarize(O=mean(median), O_cv = sd(median)/mean(median)/sqrt(n())*100) %>% ungroup()
+  ) 
+}
 
 aa_data$ion <- factor(
   aa_data$ion, 
@@ -1004,59 +1024,100 @@ isotopes_combined %>%
                                         dom = 'Bfrtip',
                                         buttons = c('copy', 'csv', 'excel', 'pdf', 'print')
     )) %>%  
-    formatSignif(c('C','N','O','H'), 4) %>%
-    formatSignif(c('C_cv','N_cv','O_cv','H_cv'), 3)
+    formatSignif(grep('^[CNOH]$', names(isotopes_combined), value=T), 4) %>%
+    formatSignif(grep('^[CNOH]_cv$', names(isotopes_combined), value=T), 3)
 ```
+
+### AA-composition
+
+```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.width=12, fig.height=12}
+aa_abundances %>% 
+  arrange(ion, group) %>% 
+  datatable(extensions = 'Buttons', options = list(
+                                        dom = 'Bfrtip',
+                                        buttons = c('copy', 'csv', 'excel', 'pdf', 'print')
+    )) %>% 
+  formatRound("abundance", 2) %>%
+  formatStyle(
+      'abundance',
+      background = styleColorBar(aa_abundances$abundance, 'azure'),
+      backgroundSize = '100% 90%',
+      backgroundRepeat = 'no-repeat',
+      backgroundPosition = 'center'
+    )
+```
+
 
 ## Final plots {.tabset}
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.width=12, fig.height=12}
-fileres_C %>% 
-  select(ion, group, file, C=mean, C_se = se) %>% 
-  left_join(
-    fileres_N %>% 
-      select(ion, group, file, N=mean, N_se = se)
-  ) %>% 
-  left_join(
-    fileres_H %>% 
-      select(ion, group, file, H=mean, H_se = se)
-  ) %>% 
-  left_join(
-    fileres_O %>% 
-      select(ion, group, file, O=mean, O_se = se)
-  ) %>% 
-  filter(ion %in% c('any','P','L','V','Pyr','H','F')) -> isotopes_se
+isotopes_se <- data.frame()
 
-gp_CN <- isotopes_se %>% 
-  ggplot(aes(
-    x=C, xmin=C-1.96*C_se, xmax=C+1.96*C_se, 
-    y=N, ymin=N-1.96*N_se, ymax=N+1.96*N_se,
-    color=group)) + geom_point()+geom_errorbar()+geom_errorbarh()+ theme_minimal() + facet_wrap(~ion, scales = 'free') + theme(axis.text.x = element_text(angle = 90, hjust = 1))
-gp_CH <- isotopes_se %>% 
-  ggplot(aes(
-    x=C, xmin=C-1.96*C_se, xmax=C+1.96*C_se, 
-    y=H, ymin=H-1.96*H_se, ymax=H+1.96*H_se,
-    color=group)) + geom_point()+geom_errorbar()+geom_errorbarh()+ theme_minimal() + facet_wrap(~ion, scales = 'free') + theme(axis.text.x = element_text(angle = 90, hjust = 1))
-gp_CO <- isotopes_se %>% 
-  ggplot(aes(
-    x=C, xmin=C-1.96*C_se, xmax=C+1.96*C_se, 
-    y=O, ymin=O-1.96*O_se, ymax=O+1.96*O_se,
-    color=group)) + geom_point()+geom_errorbar()+geom_errorbarh()+ theme_minimal() + facet_wrap(~ion, scales = 'free') + theme(axis.text.x = element_text(angle = 90, hjust = 1))
-gp_NH <- isotopes_se %>% 
-  ggplot(aes(
-    x=N, xmin=N-1.96*N_se, xmax=N+1.96*N_se, 
-    y=H, ymin=H-1.96*H_se, ymax=H+1.96*H_se,
-    color=group)) + geom_point()+geom_errorbar()+geom_errorbarh()+ theme_minimal() + facet_wrap(~ion, scales = 'free') + theme(axis.text.x = element_text(angle = 90, hjust = 1))
-gp_NO <- isotopes_se %>% 
-  ggplot(aes(
-    x=N, xmin=N-1.96*N_se, xmax=N+1.96*N_se, 
-    y=O, ymin=O-1.96*O_se, ymax=O+1.96*O_se,
-    color=group)) + geom_point()+geom_errorbar()+geom_errorbarh()+ theme_minimal() + facet_wrap(~ion, scales = 'free') + theme(axis.text.x = element_text(angle = 90, hjust = 1))
-gp_HO <- isotopes_se %>% 
-  ggplot(aes(
-    x=H, xmin=H-1.96*H_se, xmax=H+1.96*H_se, 
-    y=O, ymin=O-1.96*O_se, ymax=O+1.96*O_se,
-    color=group)) + geom_point()+geom_errorbar()+geom_errorbarh()+ theme_minimal() + facet_wrap(~ion, scales = 'free') + theme(axis.text.x = element_text(angle = 90, hjust = 1))
+if (nrow(fileres_C) > 0)
+  isotopes_se <- fileres_C %>% 
+    select(ion, group, file, C=mean, C_se = se) 
+
+if (nrow(fileres_N) > 0)
+  isotopes_se <- isotopes_se %>% 
+    left_join(
+      fileres_N %>% 
+        select(ion, group, file, N=mean, N_se = se)
+    ) 
+if (nrow(fileres_H) > 0)
+  isotopes_se <- isotopes_se %>% 
+    left_join(
+      fileres_H %>% 
+        select(ion, group, file, H=mean, H_se = se)
+    ) 
+if (nrow(fileres_O) > 0)
+  isotopes_se <- isotopes_se %>% 
+    left_join(
+      fileres_O %>% 
+        select(ion, group, file, O=mean, O_se = se)
+    ) 
+if (nrow(isotopes_se) > 0)
+  isotopes_se <- isotopes_se %>% 
+    filter(ion %in% c('any','P','L','V','Pyr','H','F'))
+
+gp_CN <- gp_CH <- gp_CO <- gp_NH <- gp_NO <- gp_HO <- ggplot() + theme_minimal()
+
+if("C" %in% names(isotopes_se) & "N" %in% names(isotopes_se)) 
+  gp_CN <- isotopes_se %>% 
+    ggplot(aes(
+      x=C, xmin=C-1.96*C_se, xmax=C+1.96*C_se, 
+      y=N, ymin=N-1.96*N_se, ymax=N+1.96*N_se,
+      color=group)) + geom_point()+geom_errorbar()+geom_errorbarh()+ theme_minimal() + facet_wrap(~ion, scales = 'free') + theme(axis.text.x = element_text(angle = 90, hjust = 1))
+
+if("C" %in% names(isotopes_se) & "H" %in% names(isotopes_se)) 
+  gp_CH <- isotopes_se %>% 
+    ggplot(aes(
+      x=C, xmin=C-1.96*C_se, xmax=C+1.96*C_se, 
+      y=H, ymin=H-1.96*H_se, ymax=H+1.96*H_se,
+      color=group)) + geom_point()+geom_errorbar()+geom_errorbarh()+ theme_minimal() + facet_wrap(~ion, scales = 'free') + theme(axis.text.x = element_text(angle = 90, hjust = 1))
+if("C" %in% names(isotopes_se) & "O" %in% names(isotopes_se)) 
+  gp_CO <- isotopes_se %>% 
+    ggplot(aes(
+      x=C, xmin=C-1.96*C_se, xmax=C+1.96*C_se, 
+      y=O, ymin=O-1.96*O_se, ymax=O+1.96*O_se,
+      color=group)) + geom_point()+geom_errorbar()+geom_errorbarh()+ theme_minimal() + facet_wrap(~ion, scales = 'free') + theme(axis.text.x = element_text(angle = 90, hjust = 1))
+if("N" %in% names(isotopes_se) & "H" %in% names(isotopes_se)) 
+  gp_NH <- isotopes_se %>% 
+    ggplot(aes(
+      x=N, xmin=N-1.96*N_se, xmax=N+1.96*N_se, 
+      y=H, ymin=H-1.96*H_se, ymax=H+1.96*H_se,
+      color=group)) + geom_point()+geom_errorbar()+geom_errorbarh()+ theme_minimal() + facet_wrap(~ion, scales = 'free') + theme(axis.text.x = element_text(angle = 90, hjust = 1))
+if("N" %in% names(isotopes_se) & "O" %in% names(isotopes_se)) 
+  gp_NO <- isotopes_se %>% 
+    ggplot(aes(
+      x=N, xmin=N-1.96*N_se, xmax=N+1.96*N_se, 
+      y=O, ymin=O-1.96*O_se, ymax=O+1.96*O_se,
+      color=group)) + geom_point()+geom_errorbar()+geom_errorbarh()+ theme_minimal() + facet_wrap(~ion, scales = 'free') + theme(axis.text.x = element_text(angle = 90, hjust = 1))
+if("H" %in% names(isotopes_se) & "O" %in% names(isotopes_se)) 
+  gp_HO <- isotopes_se %>% 
+    ggplot(aes(
+      x=H, xmin=H-1.96*H_se, xmax=H+1.96*H_se, 
+      y=O, ymin=O-1.96*O_se, ymax=O+1.96*O_se,
+      color=group)) + geom_point()+geom_errorbar()+geom_errorbarh()+ theme_minimal() + facet_wrap(~ion, scales = 'free') + theme(axis.text.x = element_text(angle = 90, hjust = 1))
 
 #grid.arrange(
 #  gp_CN,
